Eslint warning clear

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weddingapp",
-  "homepage": "https://github.com/PiotrekkP/kinga-patryk-weddingapp",
+  "homepage": "https://PiotrekkP.github.io/kinga-patryk-weddingapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
